--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<img src="img/runTxt.png" class="page4-Run"/>
 			</div>
 		</div>
+		<audio src="img/miss.mp3" autoplay="autoplay" id="music"></audio>
 		<img src="img/musicBtn.png" class="btn"/>
 		<script src="js/Jquery.js" type="text/javascript" charset="utf-8"></script>
 	    <script src="js/jquery.touchSwipe.min.js" type="text/javascript"></script>
